# PiRadioControlledCar

./: .gitignore  pyproject.toml  setting.ini  start.sh
picar/: server.py  settings.py
picar/modules/: monitor.py  motor_controller.py
picar/static/css/: pc.css
picar/static/javascript/: gamepad.js  indicator.js  keybord.js  monitor.js  webrtc.js
picar/templates/: gamepad.html  index.html  layout.html  mobile.html  pc.html  server.html  test.html
tests/: test_pitank.py
