[tool.poetry]
name = "picar"
version = "0.1.0"
description = "ラジコン"
authors = ["Takahiro55555 <tkhr.pub@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
tornado = "^6.0.3"

[tool.poetry.dev-dependencies]
websocket = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
